--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </header>
 
 <!-- Bizzabo Web Agenda Begin -->
-<div name="bizzabo-web-agenda" data-unique-name="2"></div>
+<div name="bizzabo-web-agenda" data-unique-name="2" data-events-url="https://ivan-events.ext.dev.bizzabo.com"></div>
 <script type="text/javascript">(function() {
     var bz = document.createElement('script');
     bz.type = 'text/javascript';
