--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     header content parent site
   </header>
 
-  <!-- Bizzabo Web Agenda Begin -->
-<div name=“bizzabo-web-agenda” data-unique-name=“234040" data-events-url=“https://events.bizzabo.com”></div>
-<script type=“text/javascript”>(function() {
-    var bz = document.createElement(‘script’);
-    bz.type = ‘text/javascript’;
+<!-- Bizzabo Web Agenda Begin -->
+<div name="bizzabo-web-agenda" data-unique-name="234040" data-events-url="https://events.bizzabo.com"></div>
+<script type="text/javascript">(function() {
+    var bz = document.createElement('script');
+    bz.type = 'text/javascript';
     bz.async = true;
-    bz.src = ‘https://organizer.bizzabo.com/widgets/agenda/agenda.js’;
-    var s = document.getElementsByTagName(‘script’)[0];
+    bz.src = 'https://organizer.bizzabo.com/widgets/agenda/agenda.js';
+    var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(bz, s);
 })();</script>
 <!-- Bizzabo Web Agenda End -->
