--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
   <header>
     header content parent site
   </header>
+
+  <!-- Bizzabo Web Agenda Begin -->
+<div name="bizzabo-web-agenda" data-unique-name="2" data-internal-website-base-url="https://ivan-events.ext.dev.bizzabo.com/2"></div>
+<script type="text/javascript">(function() {
+    var bz = document.createElement('script');
+    bz.type = 'text/javascript';
+    bz.async = true;
+    bz.src = 'https://ivan-organizer.ext.dev.bizzabo.com/widgets/agenda/agenda.js';
+    var s = document.getElementsByTagName('script')[0];
+    s.parentNode.insertBefore(bz, s);
+})();</script>
+<!-- Bizzabo Web Agenda End -->
   
 </body>
 </html>
