Adds prod community

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <ul>
         <li><a href="agenda.html">Agenda</a></li>
         <li><a href="community.html">Community</a></li>
+        <li><a href="communityProdArtem.html">Community Prod Artem</a></li>
       </ul>
   </header>
   
