--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@
 <body>
   <header>
       <ul>
-        <li><a href="agenda.html">Agenda</a></li>
-        <li><a href="community.html">Community</a></li>
+        <li><a href="agenda.html">Ivan Agenda</a></li>
+        <li><a href="community.html">Ivan Community</a></li>
         <li><a href="communityProdArtem.html">Community Prod Artem</a></li>
+        <li><a href="maxwell-agenda.html">Maxwell Agenda</a></li>
+        <li><a href="maxwell-community.html">Maxwell Community</a></li>
       </ul>
   </header>
   
