--- a/maxwell-community.html
+++ b/maxwell-community.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maxwell Community</title>
+  <title>Maxwell Community (QA Playground)</title>
   <style>
     body {
       padding: 100px 0 100px;
