--- a/maxwell-ring-event.html
+++ b/maxwell-ring-event.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Maxwell Agenda (QA Playground)</title>
+  <title>Maxwell RING Event</title>
   <style>
     body {
       padding: 100px 0 100px;
@@ -17,7 +17,7 @@
 </head>
 <body>
 <!-- Bizzabo Web Agenda Begin -->
-<div name="bizzabo-web-agenda" data-unique-name="325799" data-internal-website-base-url="https://events.bizzabo.com/325799"></div>
+<div name="bizzabo-web-agenda" data-unique-name="309081" data-internal-website-base-url="https://events.bizzabo.com/309081"></div>
 <script type="text/javascript">(function() {
     var bz = document.createElement('script');
     bz.type = 'text/javascript';
